# AlmostCoders1

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/: .env  .env.example  Dockerfile  database.py  docker-compose.yml  generate_mock_data.py  local_db.json  main.py  requirements.txt
backend/ai/: config.py
backend/ai/agents/: health_agent.py  orchestrator.py  outbreak_agent.py  queue_agent.py  recommendation_agent.py  summary_agent.py
backend/ai/providers/: claude_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py  router.py
backend/models/: patient.py
backend/routers/: ai.py  analytics.py  disease_surveillance.py  doctor.py  emergency.py  events.py  firebase_test.py  inventory.py  notifications.py  patient.py
backend/services/: event_logger.py  firebase.py  forecast.py  gemini_service.py  health_score.py  notification_service.py  outbreak.py  queue_predictor.py  recommendation.py  risk.py
frontend/: index.html  package-lock.json
frontend/sigma-os/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: ai.js  analytics.js  doctor.js  inventory.js  patients.js  surveillance.js
frontend/src/components/: AIBlocks.jsx  AISummary.jsx  Charts.jsx  DashboardCards.jsx  DoctorCard.jsx  EventTimeline.jsx  Header.jsx  InventoryTable.jsx  Layout.jsx  NotificationPanel.jsx  PatientForm.jsx  PatientTable.jsx  Sidebar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/design-system/components/: Badge.jsx  (+5 more)
frontend/src/hooks/: usePatients.js
frontend/src/pages/: AI.jsx  Analytics.jsx  Dashboard.jsx  DiseaseSurveillance.jsx  Doctors.jsx  Emergency.jsx  Inventory.jsx  Patients.jsx  Reports.jsx  Settings.jsx  SupplyChain.jsx
frontend/src/utils/: PlaceholderPage.jsx  constants.js
(+13 files in other folders)
