[project]
name = "phc-ai-copilot"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "CacheControl==0.14.4",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "fastapi==0.139.0",
    "firebase_admin==7.5.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.31.0",
    "google-api-python-client==2.198.0",
    "google-auth==2.55.1",
    "google-auth-httplib2==0.4.0",
    "google-cloud-core==2.6.0",
    "google-cloud-firestore==2.28.0",
    "google-cloud-storage==3.12.0",
    "google-crc32c==1.8.0",
    "google-generativeai==0.8.6",
    "google-resumable-media==2.10.0",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.81.1",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.2.0",
    "httpcore==1.0.9",
    "httplib2==0.32.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.18",
    "msgpack==1.2.1",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "proto-plus==1.28.0",
    "protobuf==5.29.6",
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "PyJWT==2.13.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.32",
    "requests==2.34.2",
    "six==1.17.0",
    "starlette==1.3.1",
    "tqdm==4.68.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.16.0",
    "tzdata==2026.2",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
    "uvicorn==0.50.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
